--- a/BirthCoach/Storyboards/Base.lproj/SettingsStoryboard_iPhone.storyboard
+++ b/BirthCoach/Storyboards/Base.lproj/SettingsStoryboard_iPhone.storyboard
@@ -113,6 +113,110 @@
             </objects>
             <point key="canvasLocation" x="911" y="-341"/>
         </scene>
+        <!--Audio Alerts View Controller-->
+        <scene sceneID="TBO-dt-fOa">
+            <objects>
+                <viewController storyboardIdentifier="AudioAlerts" id="RnN-bj-A3K" customClass="BCAudioAlertsViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="N4L-WB-9A0">
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="    Audio Reminders" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="sSH-mD-Wzy">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="42"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.87058823529999996" green="0.57254901960000004" blue="0.2784313725" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="19"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="qN1-nZ-LSV" customClass="BCStretchableButton">
+                                <rect key="frame" x="10" y="5" width="53" height="32"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Back" backgroundImage="save-button.png">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="selected" backgroundImage="save-button-selected.png"/>
+                                <state key="highlighted" backgroundImage="save-button-selected.png">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="backButtonPressed:" destination="RnN-bj-A3K" eventType="touchUpInside" id="krD-r3-pR0"/>
+                                </connections>
+                            </button>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" rowHeight="62" sectionHeaderHeight="22" sectionFooterHeight="22" id="ywI-yK-HgY">
+                                <rect key="frame" x="0.0" y="42" width="320" height="280"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.97647058819999999" green="0.90196078430000004" blue="0.83137254900000002" alpha="1" colorSpace="deviceRGB"/>
+                                <color key="separatorColor" red="0.87058823529999996" green="0.57254901960000004" blue="0.2784313725" alpha="1" colorSpace="calibratedRGB"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="TitleCell" id="P7a-ma-pz3" customClass="BCSettingsTitleCell">
+                                        <rect key="frame" x="0.0" y="22" width="320" height="62"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="61"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="45f-28-sVF">
+                                                    <rect key="frame" x="20" y="0.0" width="240" height="61"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                </label>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="settings-disclosure.png" id="enw-f1-XMD">
+                                                    <rect key="frame" x="280" y="14" width="20" height="34"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                </imageView>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
+                                        <connections>
+                                            <outlet property="disclosureImageView" destination="enw-f1-XMD" id="3bV-rl-Hqe"/>
+                                            <outlet property="titleLabel" destination="45f-28-sVF" id="8fe-tg-tS2"/>
+                                        </connections>
+                                    </tableViewCell>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="OnOffCell" id="oXV-UX-fZj" customClass="BCSettingsOnOffCell">
+                                        <rect key="frame" x="0.0" y="84" width="320" height="62"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="61"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Z8z-XA-xde">
+                                                    <rect key="frame" x="20" y="0.0" width="195" height="61"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                </label>
+                                                <switch opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" id="f7p-su-b6D">
+                                                    <rect key="frame" x="223" y="20" width="79" height="27"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                </switch>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
+                                        <connections>
+                                            <outlet property="onOffSwitch" destination="f7p-su-b6D" id="W9K-Vy-9Wv"/>
+                                            <outlet property="titleLabel" destination="Z8z-XA-xde" id="BR0-vZ-dq7"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="0kC-2K-IS1" id="hbO-G2-fac"/>
+                                    <outlet property="delegate" destination="0kC-2K-IS1" id="goP-kr-DIN"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.97647058819999999" green="0.90196078430000004" blue="0.83137254900000002" alpha="1" colorSpace="deviceRGB"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="UX8-Pv-EJI" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1347" y="-89"/>
+        </scene>
         <!--Motivational List View Controller-->
         <scene sceneID="Tda-3v-jGH">
             <objects>
@@ -188,7 +292,6 @@
                                 </state>
                                 <connections>
                                     <action selector="backButtonPressed:" destination="IQD-OI-thc" eventType="touchUpInside" id="B10-zj-gnj"/>
-                                    <action selector="doneButtonPressed:" destination="0kC-2K-IS1" eventType="touchUpInside" id="3wS-YG-kOl"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="Htn-xg-Dq2" customClass="BCStretchableButton">
@@ -204,7 +307,6 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <action selector="doneButtonPressed:" destination="0kC-2K-IS1" eventType="touchUpInside" id="vbO-gF-B5h"/>
                                     <action selector="editPressed:" destination="IQD-OI-thc" eventType="touchUpInside" id="LCw-cn-Xha"/>
                                 </connections>
                             </button>
@@ -234,7 +336,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ocY-hJ-aK0" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1335" y="-336"/>
+            <point key="canvasLocation" x="1347" y="-674"/>
         </scene>
         <!--Motivational Quote Edit View Controller-->
         <scene sceneID="pZe-1o-xqc">
@@ -265,9 +367,7 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <action selector="backButtonPressed:" destination="IQD-OI-thc" eventType="touchUpInside" id="gwL-R5-hS9"/>
                                     <action selector="backButtonPressed:" destination="mUe-HP-EkY" eventType="touchUpInside" id="qNG-zR-eJM"/>
-                                    <action selector="doneButtonPressed:" destination="0kC-2K-IS1" eventType="touchUpInside" id="ihM-FU-cSt"/>
                                 </connections>
                             </button>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="jKG-Ue-600">
@@ -288,7 +388,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aV0-yf-Mh6" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1766" y="-336"/>
+            <point key="canvasLocation" x="1778" y="-674"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="xIM-eW-n5J">
@@ -315,6 +415,9 @@
         <image name="settings-disclosure.png" width="20" height="34"/>
     </resources>
     <classes>
+        <class className="BCAudioAlertsViewController" superclassName="BCSettingsBaseViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BCAudioAlertsViewController.h"/>
+        </class>
         <class className="BCBaseViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/BCBaseViewController.h"/>
             <relationships>
