--- a/BirthCoach/Storyboards/Base.lproj/MainStoryboard_iPhone.storyboard
+++ b/BirthCoach/Storyboards/Base.lproj/MainStoryboard_iPhone.storyboard
@@ -317,38 +317,6 @@
             </objects>
             <point key="canvasLocation" x="-34" y="61"/>
         </scene>
-        <!--Motivational List View Controller-->
-        <scene sceneID="Z5V-if-HFd">
-            <objects>
-                <viewController id="khI-YE-c7j" customClass="BCMotivationalListViewController" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="kTj-ra-Vio">
-                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="KZz-C2-soB">
-                                <rect key="frame" x="27" y="11" width="60" height="44"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" title="Back">
-                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <state key="highlighted">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="backButtonPressed:" destination="khI-YE-c7j" eventType="touchUpInside" id="riU-bF-4Dk"/>
-                                </connections>
-                            </button>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="tS8-be-pGl"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="vN1-kG-Dlo" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1622" y="-556"/>
-        </scene>
         <!--Averages View Controller-->
         <scene sceneID="nPn-pg-hfA">
             <objects>
@@ -500,7 +468,7 @@
                                 </connections>
                             </scrollView>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" id="P5x-23-ryz">
-                                <rect key="frame" x="29" y="13" width="22" height="19"/>
+                                <rect key="frame" x="29" y="14" width="22" height="19"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
                                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="15" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="kHY-Xl-yas">
@@ -1120,15 +1088,13 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
         <class className="BCContractionEditViewController" superclassName="BCBaseViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/BCContractionEditViewController.h"/>
             <relationships>
-                <relationship kind="action" name="cancelPressed:"/>
-                <relationship kind="action" name="donePressed:"/>
-                <relationship kind="action" name="savePressed:"/>
                 <relationship kind="outlet" name="cancelButton" candidateClass="UIButton"/>
                 <relationship kind="outlet" name="doneBannerView" candidateClass="UIView"/>
                 <relationship kind="outlet" name="doneButton" candidateClass="UIButton"/>
                 <relationship kind="outlet" name="durationLabel" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="durationPickerView" candidateClass="UIPickerView"/>
                 <relationship kind="outlet" name="durationTitleLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="fadeView" candidateClass="UIView"/>
                 <relationship kind="outlet" name="saveButton" candidateClass="UIButton"/>
                 <relationship kind="outlet" name="startTimeLabel" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="startTimePickerView" candidateClass="UIDatePicker"/>
@@ -1145,8 +1111,6 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
         <class className="BCHistoryViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/BCHistoryViewController.h"/>
             <relationships>
-                <relationship kind="action" name="deleteSelectedContraction:"/>
-                <relationship kind="action" name="selectedContractionIntensityPressed:" candidateClass="UIButton"/>
                 <relationship kind="outlet" name="contractionHistoryLabel" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="contractionIntensityContainerView" candidateClass="UIView"/>
                 <relationship kind="outlet" name="contractionSlideOut" candidateClass="UIView"/>
@@ -1159,28 +1123,32 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
                 <relationship kind="outlet" name="selectedContractionHandle" candidateClass="UIImageView"/>
             </relationships>
         </class>
-        <class className="BCMotivationalListViewController" superclassName="BCSettingsBaseViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/BCMotivationalListViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="editPressed:"/>
-                <relationship kind="outlet" name="editButton" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="quoteTableView" candidateClass="UITableView"/>
-            </relationships>
-        </class>
         <class className="BCPageControl" superclassName="UIPageControl">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/BCPageControl.h"/>
         </class>
         <class className="BCRootViewController" superclassName="BCBaseViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/BCRootViewController.h"/>
             <relationships>
-                <relationship kind="action" name="deleteLastContraction:"/>
-                <relationship kind="action" name="lastContractionIntensityPressed:" candidateClass="UIButton"/>
-                <relationship kind="action" name="settingsButtonPressed:"/>
-                <relationship kind="action" name="startStopContraction:"/>
+                <relationship kind="outlet" name="averagesContainerView" candidateClass="UIView"/>
+                <relationship kind="outlet" name="durationLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="durationTitleLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="frequencyLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="frequencyTitleLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="historyContainerView" candidateClass="UIView"/>
+                <relationship kind="outlet" name="inspirationalLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="intensityLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="intensityTitleLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="lastContractionContainerView" candidateClass="UIView"/>
+                <relationship kind="outlet" name="lastContractionHandle" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="lastContractionIntensityContainerView" candidateClass="UIView"/>
+                <relationship kind="outlet" name="lastContractionLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="lastContractionSlideOut" candidateClass="UIView"/>
+                <relationship kind="outlet" name="nextContractionEstimateLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="settingsButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="startStopButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="timerBackgroundView" candidateClass="UIView"/>
+                <relationship kind="outlet" name="timerLabel" candidateClass="UILabel"/>
             </relationships>
-        </class>
-        <class className="BCSettingsBaseViewController" superclassName="BCBaseViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/BCSettingsBaseViewController.h"/>
         </class>
     </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
