--- a/BirthCoach/Storyboards/Base.lproj/SettingsStoryboard_iPhone.storyboard
+++ b/BirthCoach/Storyboards/Base.lproj/SettingsStoryboard_iPhone.storyboard
@@ -246,11 +246,28 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="7No-Ci-f01" customClass="BCStretchableButton">
-                                <rect key="frame" x="10" y="5" width="53" height="32"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="OTJ-MG-haK" customClass="BCStretchableButton">
+                                <rect key="frame" x="10" y="5" width="64" height="31"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" title="Back" backgroundImage="save-button.png">
+                                <state key="normal" title="Cancel" backgroundImage="save-button.png">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="selected" backgroundImage="save-button-selected.png"/>
+                                <state key="highlighted" backgroundImage="save-button-selected.png">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="backButtonPressed:" destination="y3n-hD-w5n" eventType="touchUpInside" id="DTd-cX-ntC"/>
+                                    <action selector="backButtonPressed:" destination="RnN-bj-A3K" eventType="touchUpInside" id="r4n-WN-sgJ"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="7No-Ci-f01" customClass="BCStretchableButton">
+                                <rect key="frame" x="262" y="5" width="53" height="31"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Save" backgroundImage="save-button.png">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -278,12 +295,28 @@
                                     <action selector="playStop:" destination="y3n-hD-w5n" eventType="touchUpInside" id="sYg-SZ-Qs3"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="K7Z-6U-8Gf">
+                                <rect key="frame" x="130" y="241" width="58" height="42"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Record">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="recordStop:" destination="y3n-hD-w5n" eventType="touchUpInside" id="T6l-Ab-hFL"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.97647058819999999" green="0.90196078430000004" blue="0.83137254900000002" alpha="1" colorSpace="deviceRGB"/>
                     </view>
                     <navigationItem key="navigationItem" id="1Th-8w-ufv"/>
                     <connections>
                         <outlet property="playButton" destination="2P9-1f-RQ3" id="iDA-gc-77W"/>
+                        <outlet property="recordButton" destination="K7Z-6U-8Gf" id="JGt-dr-z8C"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="msx-O1-cjm" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -492,6 +525,7 @@
             <source key="sourceIdentifier" type="project" relativePath="./Classes/BCAudioAlertEditViewController.h"/>
             <relationships>
                 <relationship kind="action" name="playStop:"/>
+                <relationship kind="action" name="recordStop:"/>
                 <relationship kind="outlet" name="playButton" candidateClass="UIButton"/>
             </relationships>
         </class>
@@ -510,7 +544,6 @@
         <class className="BCMotivationalListViewController" superclassName="BCSettingsBaseViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/BCMotivationalListViewController.h"/>
             <relationships>
-                <relationship kind="action" name="editPressed:"/>
                 <relationship kind="outlet" name="editButton" candidateClass="UIButton"/>
                 <relationship kind="outlet" name="quoteTableView" candidateClass="UITableView"/>
             </relationships>
@@ -518,7 +551,6 @@
         <class className="BCMotivationalQuoteEditViewController" superclassName="BCSettingsBaseViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/BCMotivationalQuoteEditViewController.h"/>
             <relationships>
-                <relationship kind="action" name="backButtonPressed:"/>
                 <relationship kind="outlet" name="textView" candidateClass="UITextView"/>
             </relationships>
         </class>
@@ -542,7 +574,6 @@
         <class className="BCSettingsViewController" superclassName="BCSettingsBaseViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/BCSettingsViewController.h"/>
             <relationships>
-                <relationship kind="action" name="doneButtonPressed:"/>
                 <relationship kind="outlet" name="settingsTableView" candidateClass="UITableView"/>
                 <relationship kind="outlet" name="titleLabel" candidateClass="UILabel"/>
             </relationships>
